wire posts service. minor refactoring & code updates
